# aricomp

./: Makefile  aricomp.opam  dune-project
src/: AC.ml  AC.mli  dune  test.ml
