opam-version: "2.0"
authors: "Francois Berenger"
maintainer: "unixjunkie@sdf.org"
homepage: "https://github.com/UnixJunkie/aricomp"
bug-reports: "https://github.com/UnixJunkie/aricomp/issues"
dev-repo: "git+https://github.com/UnixJunkie/aricomp.git"
license: "LGPL-2.1-or-later"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "batteries"
  "dolog"
  "dune" {>= "1.11"}
  "line_oriented"
  "minicli"
  "ocaml"
  "parany"
  "zarith"
]
synopsis: "Arithmetic Compressor"
